txid linked to explorer, raw code output hidden from GUI, txid text wrapping fixed

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -88,3 +88,14 @@ body {
 .bs-stepper .line, .bs-stepper-line {
 	background-color: rgba(255, 255, 255, 0.12) !important;
 }
+
+.wrapword {
+    white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    white-space: pre-wrap;       /* css-3 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    white-space: -webkit-pre-wrap; /* Newer versions of Chrome/Safari*/
+    word-break: break-all;
+    white-space: normal;
+}
